--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
         <!-- Login Form -->
         <div class="form-container login">
             <a href="#" class="logo">
-                <img src="./images/hub.png" alt="Homehub logo">
+                <img src="/images/hub.png" alt="Homehub logo1">
             </a>
             <form action="/login" method="post">
                 <h1>Login</h1>
