--- a/views/include/_all-properties.ejs
+++ b/views/include/_all-properties.ejs
@@ -80,7 +80,7 @@
 <ul class="property-list has-scrollbar">
   <% apartments.forEach(apt => { %>
     <li class="property-item">
-      <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
+      <a href="/apartment-detail/<%= apt._id %>">
       <div class="property-card">
         <figure class="card-banner">
           <% if (apt.photoUrl) { %>
@@ -114,7 +114,7 @@
           </div>
         </figure>
 
-        <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
+        <a href="/apartment-detail/<%= apt._id %>">
 
         <div class="card-content">
           <!-- Dynamic price -->
@@ -123,19 +123,23 @@
           </div> 
           <!-- Dynamic title -->
           <h3 class="h3 card-title">
-            <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>"><%= apt.title %></a> <!-- Link to detail page -->
+            <a href="/apartment-detail/<%= apt._id %>"><%= apt.title %></a> <!-- Link to detail page -->
           </h3>
           <!-- Dynamic description -->
           <p class="card-text">
-            <%= apt.description %>
+            <% if (apt.description && apt.description.length > 150) { %>
+              <%= apt.description.substring(0, 150) + "..." %>
+          <% } else { %>
+              <%= apt.description %>
+          <% } %>
           </p>
           <ul class="card-list">
             <!-- Placeholder for square footage -->
             <li class="card-item">
               <strong>Apartment ID (AID): AID<%= apt.aid %></strong>
-              <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
-                <span>Contact site: Administrator</span>
-                <span>Apply</span>
+              <a href="/apartment-detail/<%= apt._id %>">
+                <span>View Details</span>
+                <!-- <span>Apply</span> -->
               </a>
               <!-- <a href="/apartment-detail/">
                 <span>Details</span>
