--- a/views/include/_blog.ejs
+++ b/views/include/_blog.ejs
@@ -80,7 +80,7 @@
 <ul class="property-list has-scrollbar">
   <% apartments.forEach(apt => { %>
     <li class="property-item">
-      <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
+      <a href="/apartment-detail/<%= apt._id %>">
       <div class="property-card">
         <figure class="card-banner">
           <!-- Dynamic image source -->
@@ -116,7 +116,7 @@
             </button>
           </div>
         </figure>
-        <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
+        <a href="/apartment-detail/<%= apt._id %>">
         <div class="card-content">
           <!-- Dynamic price -->
           <div class="card-price">
@@ -124,19 +124,23 @@
           </div> 
           <!-- Dynamic title -->
           <h3 class="h3 card-title">
-            <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>"><%= apt.title %></a> <!-- Link to detail page -->
+            <a href="/apartment-detail/<%= apt._id %>"><%= apt.title %></a> <!-- Link to detail page -->
           </h3>
           <!-- Dynamic description -->
           <p class="card-text">
-            <%= apt.description %>
+            <% if (apt.description && apt.description.length > 150) { %>
+              <%= apt.description.substring(0, 150) + "..." %>
+          <% } else { %>
+              <%= apt.description %>
+          <% } %>
           </p>
           <ul class="card-list">
             <!-- Placeholder for square footage -->
             <li class="card-item">
               <strong>Apartment ID (AID): AID<%= apt.aid %></strong>
               <a href="/admin-application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
-                <span>Contact site: Administrator</span>
-                <span>Apply</span>
+                <span>View Details</span>
+                <!-- <span>Apply</span> -->
               </a>
             </li>
           </ul>
