--- a/views/success/admin-apartment.ejs
+++ b/views/success/admin-apartment.ejs
@@ -61,7 +61,8 @@
                 </p>
         </div>
         <div class="add-another-reception">
-            <a href="admin-home">Go Back</a>
+            <!-- <a href="admin-home">Go Back</a> -->
+            <a href="/go-back" id="go-back-link">Go Back</a>
             <!-- <a href="#" onclick="goBack()">Go Back</a> -->
         </div>
     </div>
@@ -79,4 +80,11 @@
       window.open(url, '_blank');
     }
   </script>
+
+<script>
+    document.getElementById('go-back-link').addEventListener('click', function(event) {
+        event.preventDefault();
+        window.history.back();
+    });
+</script>
 </html>
