--- a/views/include/_privacy-policy.ejs
+++ b/views/include/_privacy-policy.ejs
@@ -53,15 +53,14 @@
         <p>1.2. Automatically Collected Information: We may automatically collect certain information about your device and usage of the Service, including your IP address, device type, browser type, operating system, and interactions with the Service.</p>
         <br>
 
-        <h3>2. How We Use Your Information</h3>
-        <p>2.1. We may use the information we collect for the following purposes:
+        <h3>2. How We Use Your Information</h3
+        <p>2.1. We may use the information we collect for the following purposes:</p>
             - To provide and maintain the Service.
             - To communicate with you about your account and transactions.
             - To personalize your experience and improve the Service.
             - To analyze usage trends and optimize the Service.
             - To detect, prevent, and address technical issues or fraudulent activity
             - To comply with legal obligations.
-        </p>
         <br>
 
         <h3>3. How We Share Your Information</h3>
