--- a/views/include/_privacy-policy.ejs
+++ b/views/include/_privacy-policy.ejs
@@ -44,7 +44,7 @@
     <div class="card">
       <h2>Privacy Policy</h2> <br>
       <p>
-        This Privacy Policy describes how HOMEHUB AGENCY collects, uses, and shares your personal information when you use our application or website (collectively, the "Service"). By accessing or using the Service, you agree to the terms of this Privacy Policy.</p>
+        This Privacy Policy describes how HOMEHUB AGENCY collects, uses, and shares your personal information when you use our application or website (collectively, the "Service"). By accessing or using the Service, you agree to the terms of this Privacy Policy.</p><br>
       <div class="card-content">
 
         <h3>1. Information We Collect</h3>
