--- a/views/include/_privacy-policy.ejs
+++ b/views/include/_privacy-policy.ejs
@@ -54,14 +54,14 @@
         <br>
 
         <h3>2. How We Use Your Information</h3
-        <p>2.1. We may use the information we collect for the following purposes:</p>
+        <p>2.1. We may use the information we collect for the following purposes:
             - To provide and maintain the Service.
             - To communicate with you about your account and transactions.
             - To personalize your experience and improve the Service.
             - To analyze usage trends and optimize the Service.
             - To detect, prevent, and address technical issues or fraudulent activity
             - To comply with legal obligations.
-        <br>
+        </p><br>
 
         <h3>3. How We Share Your Information</h3>
         <p>3.1. We may share your personal information with third parties in the following circumstances:
