--- a/views/include/_all-application.ejs
+++ b/views/include/_all-application.ejs
@@ -107,7 +107,7 @@
                 <td class="hover role-green-bg"><%= 'AID' + apply.applyAid %></td>
                 <td class="hover role-green-bg"><%= apply.location %></td>
                 <td class="hover"><%= apply.address %></td>
-                <td class="hover"><%= apply.assignedStaff %></td>
+                <td class="hover"><%= apply.staffInCharge %></td>
 
                
                 <td class="hover px-6 py-4 whitespace-nowrap">
