--- a/views/include/_edit-user.ejs
+++ b/views/include/_edit-user.ejs
@@ -189,20 +189,28 @@
           </select>
           </div>
         </div>
-
       </div>
 
       <div class="formbold-input-flex">
         <div>
-          <label for="avaliablity" class="formbold-form-label"> Sudo </label>
-          <select id="availabilty" class="formbold-form-input" name="sudo">
-            <option value="" disabled selected hidden>Select Sudo</option>
+          <label for="sudo" class="formbold-form-label"> Sudo: </label>
+          <select id="sudo" class="formbold-form-input" name="sudo">
+            <option value="" disabled selected hidden>Select Options</option>
+            <option value="false">False</option>
+            <option value="true">True</option>
+        </select>
+        </div>
+
+        <div>
+          <label for="accountant" class="formbold-form-label"> Accountant: </label>
+          <select id="accountant" class="formbold-form-input" name="accountant">
+            <option value="" disabled selected hidden>Select Options</option>
             <option value="false">False</option>
             <option value="true">True</option>
         </select>
         </div>
       </div>
-      
+    </div>
 
 
       <!-- <div class="formbold-form-file-flex">
