--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -67,6 +67,11 @@
               <% } else { %>
                   <p></p> <!-- Empty paragraph -->
               <% } %>
+                <% if (accountant) { %>
+                  <p>(Accountant)</p>
+              <% } else { %>
+                  <p></p> <!-- Empty paragraph -->
+              <% } %>
               </span>
             </a>
           </li>
