--- a/views/acc-dashboard.ejs
+++ b/views/acc-dashboard.ejs
@@ -57,8 +57,8 @@
 
         <ul class="sidebar-list">
           <li class="sidebar-list-item">
-            <a href="/all-messages" target="_blank">
-              <span class="material-icons-outlined">chat</span> Messages
+            <a href="/administrator" target="_blank">
+              <span class="material-icons-outlined">dashboard</span> Dashboard
             </a>
           </li>
           <li class="sidebar-list-item">
