--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -110,7 +110,7 @@
             </li>
 
             <li>
-              <a href="/update-password/<%= user._id %>" class="footer-link">My account</a>
+              <a href="/update-password/<%= user._id %>" class="footer-link">Change password</a>
             </li>
 
           </ul>
@@ -154,7 +154,7 @@
             </li>
 
             <li>
-              <a href="/update-password/<%= user._id %>" class="footer-link">My account</a>
+              <a href="/update-password/<%= user._id %>" class="footer-link">Change password</a>
             </li>
 
             <!-- <li>
