--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,7 @@
         a:hover {
             color: #000;
             text-decoration: none;
-        }
+        }	
         .error-message {
             color: red;
             text-align: center;
@@ -26,11 +26,15 @@
 <body>
     <div class="container">
         <div class="form-container sign-up">
+            <!-- <a href="/home" class="logo">
+                <img src="./images/hub.png" alt="Homehub logo">
+            </a> -->
             <form action="/signup" method="post" enctype="multipart/form-data">
                 <h1>Create Account</h1>
                 <pre style="text-align: center; font: 0.6em sans-serif;">Check out the<a href="/registration-process-statement"> Registration Statement Process</a></pre>
-
-                <% if (error) { %>
+                
+                <!-- Display error message if exists -->
+                <% if (typeof error !== 'undefined' && error) { %>
                     <div class="error-message"><%= error %></div>
                 <% } %>
 
@@ -85,4 +89,3 @@
     </script>
 </body>
 </html>
-
