--- a/views/include/_blog.ejs
+++ b/views/include/_blog.ejs
@@ -138,7 +138,7 @@
             <!-- Placeholder for square footage -->
             <li class="card-item">
               <strong>Apartment ID (AID): AID<%= apt.aid %></strong>
-              <a href="/admin-application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
+              <a href="/apartment-detail/<%= apt._id %>">
                 <span>View Details</span>
                 <!-- <span>Apply</span> -->
               </a>
