--- a/views/include/_hero-admin.ejs
+++ b/views/include/_hero-admin.ejs
@@ -23,7 +23,7 @@
             </p>
 
             <a href="/create-apartment-admin">
-            <button class="btn">Create A Post</button>
+            <button class="btn">Create Post</button>
           </a>
 
           <!-- <a href="/all-apartments">
