--- a/views/include/_hero.ejs
+++ b/views/include/_hero.ejs
@@ -23,7 +23,7 @@
             </p>
 
             <a href="/create-apartment">
-            <button class="btn">Create A Post</button>
+            <button class="btn">Create Post</button>
           </a>
           </div>
 
