--- a/views/include/_post-apartment-admin.ejs
+++ b/views/include/_post-apartment-admin.ejs
@@ -9,6 +9,11 @@
 <body>
 <div class="formbold-main-wrapper">
   <div class="formbold-form-wrapper">
+    <pre style="text-align: center; font: 0.6em sans-serif;">
+      Enter the complete details of your property. 
+      Make sure you input your correct informations, 
+      we will get back to you as soon as possible.
+    </pre>
     <form action="/create-apartment" method="POST" enctype="multipart/form-data">
       <input type="hidden" name="aid" id="aid" class="formbold-form-input" />
 
